%[ER: 37]% Many cleanups of setStateImpl() for cleaner & more efficient record handling (using the new Hook::get(), etc.) Added ReqMux.cc node Improved recalculation of uniform segments in Cells.

--- a/CEP/CPA/AppAgent/MeqServer/CHANGES
+++ b/CEP/CPA/AppAgent/MeqServer/CHANGES
@@ -1,3 +1,7 @@
+  * added MeqReqMux node: request multiplexer
+    can be used to drive one tree at full resolution, and the other at
+    partial resolution
+
   * added flag_mask state field to all Function nodes. Use, e.g.:
       initrec.flag_mask := mask
     where mask is a single common mask applied to all flags (-1 to pass
