--- a/trunk/doc/MEQ/CppDataStructures.tex
+++ b/trunk/doc/MEQ/CppDataStructures.tex
@@ -429,7 +429,7 @@ virtual void setStateImpl (DataRecord &rec,bool initializing);
     settings. 
 
   \item[Cells,] specifying a domain \& grid over which a node is to be
-    evaluated.
+    evaluated. This is discussed separately, in Section \ref{resolution} below.
 
   \item[optional flags] \& other attributes (if needed for \Cells\ or change of
     state. E.g. the calc\_deriv flag).
@@ -892,8 +892,144 @@ virtual void setStateImpl (DataRecord &rec,bool initializing);
   more class-specific commands (such as \qq{save\_polc}).
   
   \end{itemize}
+  
+\section{Resolution \& Gridding}
+
+  Resolution \& gridding is a complicated business. Some basic requirements
+  are:
+
+  \begin{itemize}
+  
+  \item In the first instance, the grid/resolution is determined by incoming
+  data. We'll call this the {\em full resolution} grid.
+
+  \item It may be prohibitively expensive to evaluate some subtrees (e.g.
+  predict) at full resolution. Thus we should support going from full
+  resolution to {\em reduced resolution} (integration) and back (upsampling). 
+  
+  \item Parent nodes will not always have sufficient information to determine
+  what the best resolution for a child is. Thus, a child should be able to 
+  return data at any resolution is deems fit, and let the parent deal with it.
+  
+  \end{itemize}
+  
+  To satisfy these requirements, the following behaviour w.r.t. resolution
+  is implemented:
+  
+  \begin{enumerate}
+  
+  \item The resolution (and gridding) of a \Request\ is determined by the
+  \Cells\ object within. The \Cells\ contains a vector of cell centers and cell
+  sizes along each axis (time, frequency), plus the envelope domain. 
+
+  \item The \Cells\ of a \Request\ are merely a hint! A node is not obligated
+  to honor the requested grid -- only its envelope domain. The gridding of the
+  result is indicated by the \Cells\ returned in the \Result\ object.
+
+    \begin{itemize} 
+
+    \item Some nodes (e.g. \qq{Parm}, \qq{Freq}, \qq{Time} -- generally, nodes
+    meant to evaluate some analytic function of time and frequency) -- are able
+    to evaluate themselves over any given grid. These nodes will always return
+    a \Result\ with the same \Cells\ as the \Request; the tree designer may
+    rely on this behaviour.
+
+    \item Data-driven nodes (e.g. \qq{Spigot}) completely ignore the \Cells\
+    of the \Request. The gridding of their \Result\ is fully determined by
+    incoming data.
+
+    \end{itemize}
+    
+  \item \qq{Function}-derived (and similar) nodes operate on child results at
+  the same resolution. In the event that the children return results at
+  different resolutions, the node will do one of three things, as determined by
+  a three-way \qq{resampling} flag in its state record:
+
+    \begin{description}
+    
+    \item[FAIL:] fail execution. This is the default behaviour. 
+    
+    \item[UPSAMPLE:] evaluate and return a \Result\ at the higher resolution, by
+    upsampling lower-resolved child results.
+
+    \item[INTEGRATE:] evaluate and return a \Result\ at the lower resolution,
+    by integrating higher-resolved child results.
+    
+    \end{description}
+
+  In the rippled solvers tree (Fig. ??), this flag is indicated by an "UPS" or
+  "INT" label in the node box. No label implies the default behaviour (FAIL).
+  
+  \item A few utility nodes may be used to change resolution mid-tree.
+  Initially, two such nodes will be provided:
+
+    \begin{description}
+    
+    \item[\qq{Resampler}:] this node guarantees a \Result\ at the requested
+    resolution. A \qq{Resampler} has a single child. It passes the parent's
+    \Request\ on to the child, and if the returned \Cells\ are different from
+    the requested ones, then it resamples the result to the requested \Cells\
+    before returning it to the parent.
+
+    \item[\qq{ModRes}:] this node modifies a \Request's resolution up or down
+    by a fixed factor (or to a fixed number of cells along either axis), as as
+    determined by its state record (dynamic configuration). This node has a
+    single child. The modified \Request\ is passed on to its child, and the
+    child's \Result\ is returned.
+
+    \end{description}
+    
+  In the future, we envision more nodes, such as an adaptive resolution
+  reducer, which adaptively selects a minimum required resolution based on the
+  results of the child. At the moment, the \qq{ModRes} node is a suitable
+  proxy. 
+
+  \item Data access nodes (\qq{Sink} and \qq{Spigot}) are coupled. For each
+  snippet of data, the \qq{Sink} will issue a \Request\ with \Cells\
+  corresponding to the data layout. The corresponding \qq{Spigot} will then be
+  able to return a \Result\ with the same cells.
+  
+  \item For the time being, we'll only support integral resolutions -- i.e.,
+  the full resolution cells must be tilings of the reduced resolution cells.
+  This keeps things simple, and avoids interpolation errors. In the future, we
+  may support arbitrary regridding.
+
+  \end{enumerate}
+  
+  It is, of course, up to the tree designer to ensure that resolution is changed
+  up and down appropriately within the tree, by strategically positioning
+  \qq{Resampler} and \qq{ModRes} nodes, and enabling resampling within
+  specific \qq{Function} nodes. The tree in Fig. ?? provides a good example of
+  this.
+  
 
 \section{Description of specialized nodes}
+
+\subsection{ReqSeq}
+
+  \qq{ReqSeq} is the {\em request sequencer} node. It is used to sequence the
+  execution of requests between subtrees.
+  
+  Normally, if a node has multiple children, they may recieve \& execute their
+  requests in parallel, with no predefined order (note that in a
+  single-threaded system, they will effectively execute in sequence, however,
+  you cannot design a tree to rely on this behaviour). Some applications
+  require that branches of the tree are evaluated in a specific order. For
+  example, in the rippled solvers tree (Fig. ??), the Predict--Solver branch
+  must be executed first, to determine values for the solvable parameters,
+  followed by Predict--Subtract.
+  
+  The sequencer (\qq{ReqSeq}) node provides an easy way to sequence these
+  requests. A sequencer may have any number of children. Upon receiving a
+  request from its parent, the sequencer will pass it on to the first child,
+  and wait for the first child to return a result. Then it will go on to the
+  second child, etc. For its own result, the sequencer returns the result of
+  one of the children, as determined by its state record (run-time
+  configurable).
+
+\subsection{Resampler}
+
+\subsection{ModRes}
 
 \subsection{MeqParm}
 
@@ -1108,8 +1244,6 @@ virtual void setStateImpl (DataRecord &rec,bool initializing);
   
   \end{itemize}
   
-  
-
   Presumably, at some point the new polc values need to be stored into a MEP
   table. There are two ways to accomplish this:
 
